    missing.  [T7042]

  * gpg: Validate the trustdb after the import of a trusted key.
    [T7200]

  * gpg: Exclude expired trusted keys from the key validation process.
    [T7200]

  * gpgsm: Nearly fourfold speedup of validated certificate listings.
    [T7308]

  * agent: Fix KEYTOCARD for the use case with loopback pinentry.
    [T7283]

  * gpgconf: Allow listing of options --trusted-key,
    add-desig-revoker, and default-new-key-adsk.  [T6882]

  Release-info: https://dev.gnupg.org/T7255


Noteworthy changes in version 2.2.44 (2024-08-12)
-------------------------------------------------

  * gpg: More improvements to PKCS#12 parsing to cope with latest IVBB
    changes.  [T7213]

  * gpg: New import option "only-pubkeys".  [T7146]

  * gpg: Do not show RENC if no key capabilities are found for a key.
    [rG1d91252205]

  * gpg: Do not bail out on secret keys with an unknown algo.
    [rGc489bf7e7e]

  * gpg: Improved decryption diagnostic for an ADSK key.
    [rG861dc01994]

  * agent: Fix an uninitialized variable in an error path which may
    have caused gpg's "keytocard" command to fail.  [T6944]

  * scd: Fix regression for KDF use with OpenPGP cards.  [T7121]

  * scd: New getinfo subcommand "manufacturer".  [rG1d0874c3d2]

  Release-info: https://dev.gnupg.org/T7087


Noteworthy changes in version 2.2.43 (2024-04-16)
-------------------------------------------------

  * gpg: Do not keep an unprotected smartcard backup key on disk.  See
    https://gnupg.org/blog/20240125-smartcard-backup-key.html for a
    security advisory.  [T6944]

  * gpg: Allow to create revocations even with non-compliant algos.
    [rG89c7eccba5]

  * gpg: Fix mixed invocation with --trusted-keys and --no-options.
    [T7025]

  * gpg: Make sure a DECRYPTION_OKAY is never issued for a bad OCB
    tag.  [T7042]

  * gpg: Do not allow to accidently set the RENC usage.  [T7072]

  * gpgsm: Allow PKCS#12 decryption with a longer salt value.  [T6757]
